kube/templates/pihole-k8s_template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${PIHOLE_NAME}
  name: ${PIHOLE_NAME}
  namespace: ${PIHOLE_KUBE_NS}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PIHOLE_NAME}
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ${PIHOLE_NAME}
        name: ${PIHOLE_NAME}
    spec:
      hostname: ${PIHOLE_HOSTNAME}
      hostNetwork: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 15
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "0.8"
            memory: "1G"
          requests:
            cpu: "0.5"
            memory: "512M"
        securityContext:
          privileged: true
        ports:
          - containerPort: 80
            hostPort: 80
            name: pihole-http
            protocol: TCP
          - containerPort: 53
            hostPort: 53
            name: dns
            protocol: TCP
          - containerPort: 53
            hostPort: 53
            name: dns-udp
            protocol: UDP
          - containerPort: 443
            hostPort: 443
            name: pihole-ssl
            protocol: TCP
          - containerPort: 67
            hostPort: 67
            name: client-udp
            protocol: UDP
        volumeMounts:
        - name: etc
          mountPath: "${PIHOLE_PATH}"
        - name: dnsmasq
          mountPath: "${DNSMASQ_PATH}"
      volumes:
      - name: etc
        hostPath:
          path: $PWD/${PERSISTENCE_ETC}
          type: Directory
      - name: dnsmasq
        hostPath:
          path: $PWD/${PERSISTENCE_DNSMASQ}
          type: Directory
