kube/templates/pihole-k8s-svc_template.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${PIHOLE_NAME}
  name: pihole-tcp
  namespace: ${KUBE_NS}
spec:
  externalTrafficPolicy: Local
  ports:
  - name: dns
    protocol: TCP
    port: 53
    targetPort: 53
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  - name: pihole-http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: ${PIHOLE_NAME}
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: ${PIHOLE_LOCAL_IP_ADDRESS}
  externalIPs:
  - ${PIHOLE_LOCAL_IP_ADDRESS}
